tests/pos/i10347/C_2.java
public class C_2 {
  String hi = A.foo().head();
}
