tests/neg/i9115/A.java
public class A {
  public String foo = "A";
}
